<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ActivityRecommendation</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_sign_in">muRR</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_launch_screen">muRR</string>
    
    
    
    <string name="title_activity_questions">muRR</string>
	<string name="gender">I am a</string>
	<string name="age">What is your age range?</string>
    <string name="male">Male</string>
	<string name="female">Female</string>
    <string name="eleven">11 to 14</string>
	<string name="fifteen">15 to 17</string>
	<string name="eighteen">18 to 24</string>
	<string name="twentyfive">25 to 34</string>
	<string name="thirtyfive">35 to 44</string>
	<string name="fortyfive">45 to 54</string>
	<string name="fiftyfive">55 to 64</string>
	<string name="sixtyfive">65+</string>
	
	<string name="active">On a scale of 1 to 5 how active are you?</string>
	<string name="actone">1</string>
	<string name="acttwo">2</string>
	<string name="actthree">3</string>
	<string name="actfour">4</string>
	<string name="actfive">5</string>
	
	<string name="cultural">On a scale of 1 to 5 how cultural are you?</string>
	<string name="culone">1</string>
	<string name="cultwo">2</string>
	<string name="culthree">3</string>
	<string name="culfour">4</string>
	<string name="culfive">5</string>
	
	<string name="outdoors">On a scale of 1 to 5 how much do you like the outdoors?</string>
	<string name="outone">1</string>
	<string name="outtwo">2</string>
	<string name="outthree">3</string>
	<string name="outfour">4</string>
	<string name="outfive">5</string>
	
	<string name="adventurous">On a scale of 1 to 5 how adventurous are you?</string>
	<string name="advone">1</string>
	<string name="advtwo">2</string>
	<string name="advthree">3</string>
	<string name="advfour">4</string>
	<string name="advfive">5</string>
	
    
</resources>