<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" >
    
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
	    >

		<TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text= "@string/gender"  />
		<RadioGroup
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		    
		    <RadioButton android:id="@+id/male"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/male"
		        android:onClick="onRadioButtonClicked"/>
		    <RadioButton android:id="@+id/female"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/female"
		        android:onClick="onRadioButtonClicked"/>
	    </RadioGroup>
	    
	    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text= "@string/age" 
		         />
	    <RadioGroup
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		    <RadioButton android:id="@+id/ageeleven"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/eleven"
		        android:onClick="onRadioButtonClicked"/>
		    
		    <RadioButton android:id="@+id/agefifteen"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/fifteen"
		        android:onClick="onRadioButtonClicked"/>
			
			<RadioButton android:id="@+id/ageeighteen"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/eighteen"
		        android:onClick="onRadioButtonClicked"/>
			
			<RadioButton android:id="@+id/agetwentyfive"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/twentyfive"
		        android:onClick="onRadioButtonClicked"/>
			
			<RadioButton android:id="@+id/agethirtyfive"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/thirtyfive"
		        android:onClick="onRadioButtonClicked"/>
			
			<RadioButton android:id="@+id/agefortyfive"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/fortyfive"
		        android:onClick="onRadioButtonClicked"/>
			
			<RadioButton android:id="@+id/agefiftyfive"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/fiftyfive"
		        android:onClick="onRadioButtonClicked"/>
			
			<RadioButton android:id="@+id/agesixtyfive"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/sixtyfive"
		        android:onClick="onRadioButtonClicked"/>
		</RadioGroup>
		
	    
	    
	    
	    <RadioGroup
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
			<TextView
		 		android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			    android:text= "@string/active" 
			         />
			<RadioButton android:id="@+id/actone"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/actone"
		        android:onClick="onRadioButtonClicked"/>
			
			<RadioButton android:id="@+id/acttwo"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/acttwo"
		        android:onClick="onRadioButtonClicked"/>
			
			<RadioButton android:id="@+id/actthree"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/actthree"
		        android:onClick="onRadioButtonClicked"/>
			
			<RadioButton android:id="@+id/actfour"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/actfour"
		        android:onClick="onRadioButtonClicked"/>
			
			<RadioButton android:id="@+id/actfive"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/actfive"
		        android:onClick="onRadioButtonClicked"/>
		</RadioGroup>
		
	    
	    
	    <RadioGroup
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
			<TextView
		 		android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			    android:text= "@string/cultural" 
			         />
			<RadioButton android:id="@+id/culone"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/culone"
		        android:onClick="onRadioButtonClicked"/>
			
			<RadioButton android:id="@+id/cultwo"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/cultwo"
		        android:onClick="onRadioButtonClicked"/>
			
			<RadioButton android:id="@+id/culthree"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/culthree"
		        android:onClick="onRadioButtonClicked"/>
			
			<RadioButton android:id="@+id/culfour"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/culfour"
		        android:onClick="onRadioButtonClicked"/>
			
			<RadioButton android:id="@+id/culfive"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/culfive"
		        android:onClick="onRadioButtonClicked"/>
		</RadioGroup>
		
	    
	    
	    
	    <RadioGroup
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
			<TextView
		 		android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			    android:text= "@string/outdoors" 
			         />
			<RadioButton android:id="@+id/outone"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/outone"
		        android:onClick="onRadioButtonClicked"/>
			
			<RadioButton android:id="@+id/outtwo"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/outtwo"
		        android:onClick="onRadioButtonClicked"/>
			
			<RadioButton android:id="@+id/outthree"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/outthree"
		        android:onClick="onRadioButtonClicked"/>
			
			<RadioButton android:id="@+id/outfour"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/outfour"
		        android:onClick="onRadioButtonClicked"/>
			
			<RadioButton android:id="@+id/outfive"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/outfive"
		        android:onClick="onRadioButtonClicked"/>
		</RadioGroup>
		
	    
	    
	    
	    <RadioGroup
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
			<TextView
		 		android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			    android:text= "@string/adventurous" 
			         />
			<RadioButton android:id="@+id/advone"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/advone"
		        android:onClick="onRadioButtonClicked"/>
			
			<RadioButton android:id="@+id/advtwo"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/advtwo"
		        android:onClick="onRadioButtonClicked"/>
			
			<RadioButton android:id="@+id/advthree"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/advthree"
		        android:onClick="onRadioButtonClicked"/>
			
			<RadioButton android:id="@+id/advfour"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/advfour"
		        android:onClick="onRadioButtonClicked"/>
			
			<RadioButton android:id="@+id/advfive"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/advfive"
		        android:onClick="onRadioButtonClicked"/>
		</RadioGroup>
		

	</LinearLayout>
	
</ScrollView>